tests/baselines/reference/stringStartsWith.errors.txt
tests/cases/compiler/stringStartsWith.ts(10,47): error TS2345: Argument of type 'string' is not assignable to parameter of type '`test${string}`'.
tests/cases/compiler/stringStartsWith.ts(11,57): error TS2345: Argument of type 'string' is not assignable to parameter of type '`test${string}`'.
tests/cases/compiler/stringStartsWith.ts(12,57): error TS2345: Argument of type 'string' is not assignable to parameter of type '`test${string}`'.


==== tests/cases/compiler/stringStartsWith.ts (3 errors) ====
    declare var test: string;
    declare function requirePrefix(input: `test${string}`): void;
    
    // works
    if (test.startsWith('test')) requirePrefix(test);
    if (test.startsWith('test', undefined)) requirePrefix(test);
    if (test.startsWith('test', 0)) requirePrefix(test);
    
    // errors
    if (test.startsWith('test', 1)) requirePrefix(test);
                                                  ~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '`test${string}`'.
    if (test.startsWith('test', 0 as number)) requirePrefix(test);
                                                            ~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '`test${string}`'.
    if (test.startsWith('test', 1 as number)) requirePrefix(test);
                                                            ~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type '`test${string}`'.
    